fix the css word wrap long url

--- a/ProtonMail/ProtonMail/Resource/editor.css
+++ b/ProtonMail/ProtonMail/Resource/editor.css
@@ -41,7 +41,7 @@ table * {
     word-break: initial;
 }
 
-table a {
+table a, table p {
     word-break: break-word;
 }
 
